# project

./: .gitignore  README.md  Untitled-1.ipynb  capstone_implementation_spec.md  capstone_proposal.md  claude_code_commands.md  phase1_colab.ipynb  requirements.txt  technical_spec.md
vla-risk-wrapper/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt
vla-risk-wrapper/configs/: base.yaml
vla-risk-wrapper/configs/detector/: mlp_action_only.yaml  mlp_hidden_only.yaml  mlp_hybrid.yaml  mlp_proprio_only.yaml
vla-risk-wrapper/configs/env/: assembling_kits.yaml  peg_insertion.yaml  pick_cube.yaml  pick_single_ycb.yaml  stack_cube.yaml
vla-risk-wrapper/configs/experiment/: phase1_baseline.yaml  phase2_collect_data.yaml  phase2_train_detector.yaml  phase3_wrapper_eval.yaml  phase4_ablation.yaml
vla-risk-wrapper/configs/policy/: octo.yaml  openvla.yaml
vla-risk-wrapper/configs/reasoner/: llava_next_7b.yaml  qwen25_vl_3b.yaml  rule_based.yaml
vla-risk-wrapper/notebooks/: 00_env_smoke_test.ipynb
vla-risk-wrapper/scripts/: _dryrun_collect.py  check_environment.sh  make_figures.py  phase1_run_baseline.py  phase2_collect_data.py  phase2_train_detector.py  phase3_run_wrapper.py  phase4_ablations.py
vla-risk-wrapper/src/data/: collect.py  io.py  schema.py
vla-risk-wrapper/src/detector/: calibrate.py  model.py  (+4 more)
vla-risk-wrapper/tests/: test_data.py  test_detector.py  test_env.py  test_eval.py  test_eval_reproducibility.py  test_features.py  test_labeling.py  test_policy.py  test_primitives.py  test_reasoner.py  test_wrapper.py
(+37 files in other folders)
