[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vla-risk-wrapper"
version = "0.1.0"
description = "Predictive Risk-Gated VLA Wrapper for contact-rich manipulation tasks"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
